--- a/assets/css/pages/homepage.css
+++ b/assets/css/pages/homepage.css
@@ -20,7 +20,8 @@
   }
   .hero__body {
     position: relative; z-index: 3;
-    padding-bottom: 50px; max-width: 750px;
+    padding-bottom: 50px; max-width: 650px;
+    margin-right: auto;
   }
   .hero__title {
     font-size: clamp(36px, 5vw, 60px); font-weight: 400;
